--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright Browsers
-      run: nnpx playwright install chromium
+      run: npx playwright install chromium
     - name: Run Playwright tests
       run: npx playwright test
     - uses: actions/upload-artifact@v3
