--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,3 +19,9 @@ jobs:
         run: npm ci
       - name: Run your tests
         run: npx playwright test
+      - uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 5
